--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,6 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.android.support:customtabs:23.0.1'
     compile 'de.greenrobot:greendao:2.0.0'
+    compile 'com.github.dexafree:materiallist:3.0.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
