--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'de.greenrobot:greendao:2.0.0'
     compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.github.greenfrvr:hashtag-view:1.1.0'
 }
