--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'idea'
 
 android {
     compileSdkVersion 23
@@ -46,4 +47,12 @@ dependencies {
     compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.greenfrvr:hashtag-view:1.1.0'
+    compile 'com.android.support:design:23.0.1'
+}
+
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
