--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.greenfrvr:hashtag-view:1.1.0'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 idea {
