--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,15 +39,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:customtabs:23.0.1'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:customtabs:23.0.1'
-    compile 'com.github.dexafree:materiallist:3.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.greenfrvr:hashtag-view:1.1.0'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
 }
 
 idea {
