--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.greenfrvr:hashtag-view:1.1.0'
+    compile 'org.jetbrains:annotations:13.0'
 }
 
 idea {
