--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright 2014-2015 Project Chronos and Pramantha Ltd
   ~
   ~    Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,7 +25,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme.Launcher">
         <activity
-            android:name=".MainActivity"
+            android:name=".activites.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Launcher">
             <intent-filter>
